grid gap fix

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -113,6 +113,7 @@
         width: 658px;
     }
     .about-list {
+        gap: 32px;
         grid-template-columns: auto auto;
     }
     .about-item {
